# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.26.3
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Follow most of Google's C++ style guidelines:
	  eix now avoids using static or global classes. It should at least
	  pass src/cpplint.sh (i.e. cpplint.py up to minor whitespace
	  conventions). Exceptions (false positives) are marked with NOLINT.
	  This is actually a major rewrite which makes many things cleaner.
	  Thanks a lot to Michał Bartoszkiewicz <mbartoszkiewicz at gmail.com>
	  for analyzing a hard to find bug introduced by changing types.
	- Fix regression from eix-0.26.1 of wrong <availableversions:VAR>
	  (used e.g. with --versionlines in default format).
	- Use cache of true filenames instead of heuristic recursion bounds.
	- Improve varsreader: Treat ;|&) as additional end symbols (like shell)
	- Fix frequent warnings (mainly with pragmas).
	- Fix mkstemp name and a possible memory leak.
	- Allow --disable-silent-rules to follow Gentoo's policy, although
	  personally, I dislike it, and it is not necessary for eix.

*eix-0.26.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- eix-test-obsolete: Add -q, "quick", use FORMAT_TEST_OBSOLETE,
	  support TEST_FOR_REDUNDANCY better
	- Fix masked-packages: Treat repository name in arguments correctly.
	- masked-packages: Treat - as standard input.
	- Fix USE=tools linking error (regression of eix-0.26.0), see
	  http://bugs.gentoo.org/show_bug.cgi?id=425512
	- Allow KEYWORDS='*' and KEYWORDS='~*' in ebuilds
	- Support profile-format=portage-2, see
	  http://bugs.gentoo.org/show_bug.cgi?id=426256
	- Introduce DEFAULT_ARCH and ./configure --with-default-arch
	- Use function pointers instead of case cascades
	  for FORMAT execution and for file parsing.
	  This is cleaner and might speed up things.
	- manpage: improve description of masked-packages
	- varsreader: Fix hang for DOS line ends, see
	  http://forums.gentoo.org/viewtopic-t-929536.html